fixed alignment of smaller icons

--- a/src/style/partials/_list.scss
+++ b/src/style/partials/_list.scss
@@ -24,6 +24,7 @@
     }
     
     p                                           { width:100%; }
+    .icon--s                                    { margin-top:6px; }
 }
 
 *+.list                                         { margin-top:20px; }
