--- a/src/style/partials/_typography.scss
+++ b/src/style/partials/_typography.scss
@@ -35,7 +35,7 @@ body, form, input, textarea, select, label,
 .radio > span label, form .message, .btn        { font-family:'opensans', Sans-Serif; }
 
 html                                            { scroll-behavior:smooth; }
-body, .body                                     { font-size:12px; line-height:17px; letter-spacing:.5px; background-color:$color--snow; font-weight:normal; color:$color--midnight-70; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
+body, .body                                     { font-size:12px; line-height:17px; letter-spacing:.5px; background-color:$color--snow; font-weight:normal; color:$color--midnight-50; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
 
 /***** Typography *****/
 h1, h2, h3, h4, h5, h6,
